welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:4: error: expected class or object definition
def fonctionTest() : Boolean={
^ColumnByColumn:10: error: Unmatched closing brace '}' ignored here
  else {return true}}
                    ^